rust_test_framework/tests/compile_tests/should_fail/duplicate_enum.stderr
error: Duplicate test case value found
  --> tests/compile_tests/should_fail/duplicate_enum.rs:11:15
   |
11 | #[test_params(MyEnum::A)]
   |               ^^^^^^
